[package]
name = "rSentenceHash"
version = "1.2.0"
authors = ["TheTrueColonel"]
description = "Attempts to find a sentence where the last n characters of the SHA256 hash is appended to the sentense."
edition = "2024"
repository = "https://github.com/TheTrueColonel/rSentenceHash"
readme = "README.md"
license-file = "LICENSE"
exclude = ["/.idea/*", "/.git/*", "/.github/*"]

[dependencies]
sha2 = "0.11.0"
base16ct = { version = "1.0.0", features = ["alloc"] }
libsw = "3.5.0"
rayon = "1.11.0"
color-eyre = "0.6.5"

[dev-dependencies]
criterion = "0.8.2"
lazy_static = "1.5.0"

[profile.release]
debug = false
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[profile.dev.package.backtrace]
opt-level = 3

[[bench]]
name = "my_benchmark"
harness = false